[package]
name = "way_too_deep_futures"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo-edit = "0.12.3"
color-eyre = "0.6.3"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"] }
